# CtrlScript

./: README.md  csui.js  demo.html  docs.md  progress.md
.claude/: settings.local.json
.github/workflows/: build-native.yml
csui-A/: .gitignore  csua.js  docs.md  package.json
csui-A/.github/workflows/: build-native.yml
csui-A/android/: Bootstrap.java  BridgeInterface.java  CsuaCanvasView.java  CsuaModule.java  QuickJS.java  ShapeView.java  SvgCanvasView.java
csui-A/android/jni/: CMakeLists.txt  quickjs_jni.c
csui-A/android/modules/: ModuleApp.java  ModuleAudio.java  ModuleBackground.java  ModuleBiometric.java  ModuleBluetooth.java  ModuleCamera.java  ModuleDevice.java  ModuleDialog.java  ModuleIntents.java  ModuleNFC.java  ModuleNetwork.java  ModuleNotifications.java  ModulePermissions.java  ModuleSensors.java  ModuleStorage.java  ModuleViews.java
csui-A/cli/: index.js
csui-A/template/: app.js  build.gradle  csua.config.js  settings.gradle
csui-A/template/app/: build.gradle
csui-A/template/app/src/main/: AndroidManifest.xml
csui-A/template/app/src/main/res/values/: strings.xml
